@@ -43,7 +43,7 @@ inc_dir = include_directories(['include',
                                 get_option('cli11_include_dir'),
                                 get_option('spdlog_include_dir'),
 #                               get_option('json_include_dir'),
-                                get_option('asio_include_dir')                           
+                                get_option('tabulate_include_dir')                           
                               ])
 
 
