@@ -15,7 +15,7 @@ option('pprint_include_dir', type : 'string', value : '', description : 'the dir
 option('rang_include_dir', type : 'string', value : '', description : 'the dir containing rang.hpp')
 option('spdlog_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/spdlog', description : 'the include dir of spdlog')
 option('sml_include_dir', type : 'string', value : '', description : 'the dir containing sml.hpp')
-option('tabulate_include_dir', type : 'string', value : '', description : 'the dir containing tabulate.hpp')
+option('tabulate_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/tab/', description : 'the dir containing tabulate.hpp')
 option('taskflow_include_dir', type : 'string', value : '', description : 'the dir containing the dir taskflow')
 option('toml_include_dir', type : 'string', value : '', description : 'the include dir of toml++')
 option('tfile_include_dir', type : 'string', value : '', description : 'the dir containing tfile.h')
